# wordle_solver

./: README.md  load_screen.py  main.py  pyproject.toml  solver.py  solver_gui.py  wordle_solver_gui.py
data/: palabras.json
util/: utils.py
